--- a/src/BlazorHybridExampleApp/wwwroot/css/app.css
+++ b/src/BlazorHybridExampleApp/wwwroot/css/app.css
@@ -2,6 +2,11 @@
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+body {
+    margin: 0;
+    padding: 15px;
+}
+
 h1:focus {
     outline: none;
 }
